# fcitx5

./: .clang-format  .codedocs  .formatignore  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  Messages.sh  README.md  clang-format.sh  config.h.in
data/: 20-fcitx-x11.in  CMakeLists.txt  fcitx5-autostart.sh  fcitx5-configtool  fcitx5-configtool.desktop.in  fcitx5-configtool.desktop.in.in  fcitx5-configtool.sh  fcitx5-diagnose.sh  fcitx5-exec.sh  fcitx5.desktop.in  fcitx5.desktop.in.in  fcitx5.sh.in  org.fcitx.Fcitx5.WaylandLauncher.desktop.in.in  org.fcitx.Fcitx5.desktop.in.in  org.fcitx.Fcitx5.metainfo.xml.in  start-fcitx5.sh.in
data/bangla/: user.dict.txt
data/default/: ar_DZ  as_IN  ast_ES  az_AZ  be_BY  bg_BG  bn_IN  cat_ES  cs_CZ  de_CH  de_DE  el_CY  en_GB  en_US  en_ZA  es_MX  fr_BE  fr_CH  fr_FR  gl_ES  gu_IN  he_IL  hi_IN  it_IT  ja_JP  kn_IN  ko_KR  mai_IN  ml_IN  mr_IN  nl_NL  or_IN  pa_IN  pl_PL  pt_BR  pt_PT  ru_RU  sd_IN  sk_SK  ta_IN  (+5 more)
data/icon/: CMakeLists.txt
src/: CMakeLists.txt
src/frontend/: CMakeLists.txt
src/frontend/dbusfrontend/: CMakeLists.txt  dbusfrontend.conf  dbusfrontend.conf.in  dbusfrontend.conf.in.in  dbusfrontend.cpp  dbusfrontend.h
src/frontend/fcitx4frontend/: CMakeLists.txt  fcitx4frontend.conf.in  fcitx4frontend.conf.in.in  fcitx4frontend.cpp  fcitx4frontend.h  fcitx4utils.cpp  fcitx4utils.h
src/frontend/ibusfrontend/: CMakeLists.txt  ibusfrontend.conf.in  ibusfrontend.conf.in.in  ibusfrontend.cpp  ibusfrontend.h  ibustypes.cpp  ibustypes.h
src/frontend/waylandim/: CMakeLists.txt  appmonitor.cpp  appmonitor.h  gnomeappmonitor.cpp  gnomeappmonitor.h  plasmaappmonitor.cpp  plasmaappmonitor.h  portalappmonitor.cpp  portalappmonitor.h  virtualinputcontext.cpp  virtualinputcontext.h  waylandim.conf  waylandim.conf.in  waylandim.conf.in.in  waylandim.cpp  waylandim.h  waylandim_public.h  waylandimserver.cpp  waylandimserver.h  waylandimserverbase.cpp  waylandimserverbase.h  waylandimserverv2.cpp  waylandimserverv2.h  wlrappmonitor.cpp  wlrappmonitor.h
src/frontend/xim/: CMakeLists.txt  xim.conf  xim.conf.in  xim.conf.in.in  xim.cpp  xim.h
src/im/: CMakeLists.txt
src/im/bangla/: CMakeLists.txt  avro.conf.in  avro_parser.cpp  avro_parser.h  avro_rules.inc  bangla-addon.conf.in.in  bangla.cpp  bangla.h  probhat.conf.in  probhat_keymap.h
src/im/keyboard/: CMakeLists.txt  chardata.h  compose.cpp  compose.h  isocodes.cpp  isocodes.h  keyboard.conf  keyboard.conf.in  keyboard.conf.in.in  keyboard.cpp  keyboard.h  keyboard_public.h  longpress.cpp  longpress.h  longpressdata.h  xkbrules.cpp  xkbrules.h  xmlparser.cpp  xmlparser.h
src/lib/: CMakeLists.txt
src/lib/fcitx/: CMakeLists.txt  Fcitx5Core.pc.in  Fcitx5CoreConfig.cmake.in  Fcitx5Download.cmake.in  Fcitx5Macros.cmake  Fcitx5ModuleTemplate.cmake.in  FcitxCoreConfig.cmake.in  action.cpp  action.h  addon.cpp  addon.h  addonfactory.cpp  addonfactory.h  addoninfo.cpp  addoninfo.h  addoninstance.cpp  addoninstance.h  addoninstance_details.h  addoninstance_p.h  addonloader.cpp  addonloader.h  addonloader_p.h  addonmanager.cpp  addonmanager.h  candidateaction.cpp  candidateaction.h  candidatelist.cpp  candidatelist.h  dbus.h  dbus_sdbus.cpp  element.cpp  element.h  event.cpp  event.h  focusgroup.cpp  focusgroup.h  focusgroup_p.h  frontend.cpp  frontend.h  globalconfig.cpp  (+46 more)
src/lib/fcitx-config/: CMakeLists.txt  Fcitx5Config.pc.in  Fcitx5ConfigConfig.cmake.in  configuration.cpp  configuration.h  dbushelper.cpp  dbushelper.h  enum.h  iniparser.cpp  iniparser.h  iniparser_deprecated.cpp  marshallfunction.cpp  marshallfunction.h  option.cpp  option.h  option_details.h  optiontypename.h  rawconfig.cpp  rawconfig.h
src/lib/fcitx-utils/: CMakeLists.txt  Fcitx5Macros.cmake  Fcitx5Utils.pc.in  Fcitx5UtilsConfig.cmake.in  XF86keysym.h  androidstreambuf.cpp  androidstreambuf.h  capabilityflags.h  charutils.h  color.cpp  color.h  connectableobject.cpp  connectableobject.h  cutf8.cpp  cutf8.h  dbus-message-details.h  dbus-message-p.h  dbus-message.cpp  dbus-message.h  dbus-message_p.h  dbus-object-vtable-wrapper.c  dbus-object-vtable-wrapper.h  dbus-object-vtable.cpp  dbus-object-vtable.h  dbus-object-vtable_p.h  dbus.cpp  dbus.h  dbus_p.h  dynamictrackableobject.cpp  dynamictrackableobject.h  element.cpp  element.h  endian_p.h  environ.cpp  environ.h  event.cpp  event.h  event_common.cpp  event_impl.h  event_libevent.cpp  (+73 more)
src/lib/fcitx-wayland/: CMakeLists.txt
src/modules/: CMakeLists.txt  Fcitx5Module.pc.in  Fcitx5ModuleConfig.cmake.in
src/modules/clipboard/: CMakeLists.txt  clipboard.conf  clipboard.conf.in  clipboard.conf.in.in  clipboard.cpp  clipboard.h  clipboard_public.h  clipboardentry.h  clipboardtempmode.cpp  clipboardtempmode.h  waylandclipboard.cpp  waylandclipboard.h  xcbclipboard.cpp  xcbclipboard.h
src/modules/dbus/: CMakeLists.txt  dbus.conf  dbus.conf.in  dbus.conf.in.in  dbus_public.h  dbusmodule.cpp  dbusmodule.h  (+1 more)
src/server/: CMakeLists.txt  errorhandler.cpp  errorhandler.h  main.cpp
src/tools/: CMakeLists.txt  remote.cpp  wayland-launcher.cpp
src/ui/: CMakeLists.txt
test/: CMakeLists.txt  dbus_wrapper.sh  eventlooptests.cpp  eventlooptests.h  testaddon.cpp  testcandidatelist.cpp  testcolor.cpp  testcompose.cpp  testconfig.cpp  testconfig.h  testconfigdbus.cpp  testcustomeventloop.cpp  testdbus.cpp  testdbusmessage.cpp  testdbusunixfd.cpp  testdir.h.in  testelement.cpp  testemoji.cpp  testenviron.cpp  testevent.cpp  testeventdispatcher.cpp  testfallbackuuid.cpp  testfdstreambuf.cpp  testflags.cpp  testfs.cpp  testhandlertable.cpp  testi18nstring.cpp  testicontheme.cpp  testinputbuffer.cpp  testinputcontext.cpp  testinstance.cpp  testisocodes.cpp  testkey.cpp  testlayout.cpp  testlibrary.cpp  testlist.cpp  testlog.cpp  testmenu.cpp  testmetastring.cpp  testquickphrase.cpp  (+21 more)
test/addon/: CMakeLists.txt  dummyaddon.cpp  dummyaddon_public.h  dummyaddondeps.cpp
testing/testfrontend/: CMakeLists.txt  testfrontend.conf  testfrontend.cpp  testfrontend.h  testfrontend_public.h
testing/testim/: CMakeLists.txt  testim.conf  testim.cpp  testim.h  testim_public.h
(+604 files in other folders)
